<resources>
    <string name="app_name">Paula Flores</string>
    <string name="registro">REGISTRO</string>
    <string name="version">Versión 1.0</string>
    <string name="boton">Registrar</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintApellido">Apellido</string>
    <string name="hintEmail">Correo</string>
    <string name="ingresa_valor">Ingresa un valor</string>
    <string name="valor_requerido">Valor requerido</string>
    <string name="correo_invalido">Correo Inválido</string>
    <string name="carrera1">Ingenería Aeroespacial</string>
    <string name="carrera2">Ingenería Civil</string>
    <string name="carrera3">Ingenería Geomática</string>
    <string name="carrera4">Ingenería Ambiental</string>
    <string name="carrera5">Ingenería Geofísica</string>
    <string name="carrera6">Ingenería Geológica</string>
    <string name="carrera7">Ingenería Petrolera</string>
    <string name="carrera8">Ingenería de Minas</string>
    <string name="carrera9">Ingenería en Computación</string>
    <string name="carrera10">Ingenería Eléctrica Electrónica</string>
    <string name="carrera11">Ingenería en Telecomunicación</string>
    <string name="carrera12">Ingenería Mecánica</string>
    <string name="carrera13">Ingenería Industrial</string>
    <string name="carrera14">Ingenería Mecatrónica</string>
    <string name="carrera15">Ingenería Biomédica</string>
    <string name="date">Fecha de nacimiento</string>
    <string name="NumCuenta">Cuenta</string>
    <string name="SeleccionaCarrera">Selecciona tu carrera</string>
    <string name="IngresaFecha">Ingresa tu Fecha de Nacimiento</string>
    <string name="edad">Edad</string>
    <string name="aries">Aries</string>
    <string name="tauro">Tauro</string>
    <string name="geminis">Géminis</string>
    <string name="cancer">Cáncer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="escorpion">Escorpión</string>
    <string name="sagitario">Sagitario</string>
    <string name="capricornio">Capricornio</string>
    <string name="acuario">Acuario</string>
    <string name="picis">Piscis</string>
    <string name="rata">Rata</string>
    <string name="perro">Perro</string>
    <string name="cerdo">Cerdo</string>
    <string name="cabra">Cabra</string>
    <string name="buey">Buey</string>
    <string name="tigre">Tigre</string>
    <string name="conejo">Conejo</string>
    <string name="dragon">Dragón</string>
    <string name="serpiente">Serpiente</string>
    <string name="caballo">Caballo</string>
    <string name="mono">Mono</string>
    <string name="gallo">Gallo</string>
    <string name="FechaDeNacimiento">Nacimiento</string>
    <string-array name="carreras">
        <item>@string/SeleccionaCarrera</item>
        <item>@string/carrera1</item>
        <item>@string/carrera2</item>
        <item>@string/carrera3</item>
        <item>@string/carrera4</item>
        <item>@string/carrera5</item>
        <item>@string/carrera6</item>
        <item>@string/carrera7</item>
        <item>@string/carrera8</item>
        <item>@string/carrera9</item>
        <item>@string/carrera10</item>
        <item>@string/carrera11</item>
        <item>@string/carrera12</item>
        <item>@string/carrera13</item>
        <item>@string/carrera14</item>
        <item>@string/carrera15</item>
    </string-array>
</resources>